--- a/src/app/universidades/universidades.component.html
+++ b/src/app/universidades/universidades.component.html
@@ -110,7 +110,7 @@
             <div class="form-group row">
                 <div class="modal-body">
                     
-                    <table class="table table-striped table_size">
+                    <table class="table table-striped">
                         <thead class="thead_color">
                             <tr>
                                 <th>Nome da Universidade</th>
