--- a/src/app/universidades/universidades.component.html
+++ b/src/app/universidades/universidades.component.html
@@ -2,7 +2,7 @@
     <h1>Universidades do Mundo</h1>
 </div>
 
-<div class="background">
+<div class="background_body">
 
     <div class="space"></div>
 
@@ -35,7 +35,7 @@
     </table>
 
 </div>
-
+<footer class="footer">2022 João Mendes - All Rights Reserved.</footer>
 
 <!--MODALS-->
 
