--- a/src/app/universidades/universidades.component.html
+++ b/src/app/universidades/universidades.component.html
@@ -70,7 +70,7 @@
                     
                        
                     
-                        <div class="col-md-6 alinhar_botao_pesquisa">
+                        <div class="col-md-6 alinhar_texto">
                     
                             <div class="form-group">
                                 <h4>Nome da Universidade</h4>
